--- a/restaurant-frontend/src/styles/Menu.css
+++ b/restaurant-frontend/src/styles/Menu.css
@@ -92,14 +92,15 @@
 /* ✅ Category Name Overlay */
 .category-name {
   position: absolute;
-  bottom: 10px;
+  bottom: 1px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.6);
-  color: white;
+  background: rgba(122, 122, 123, 0.6);
+  color: rgb(240, 199, 86);
   padding: 5px 10px;
   border-radius: 5px;
-  font-size: 14px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 /* ✅ Hover Effects */
@@ -113,6 +114,13 @@
   border: 3px solid #ff6a00;
   box-shadow: 0px 4px 10px rgba(255, 106, 0, 0.5);
 }
+
+.select-category-msg{
+   color: #ec653c;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
 
 /* ✅ Review Section */
 .reviews {
