--- a/restaurant-frontend/src/styles/Hero.css
+++ b/restaurant-frontend/src/styles/Hero.css
@@ -34,7 +34,7 @@
   font-weight: bold;
   margin-bottom: 15px;
   color: #dcd2c3;
-  text-shadow: 1px 1px 4px #dc7d09;;
+  text-shadow: 1px 1px 4px #dc7d09;
 }
 
 .hero-subtitle {
