--- a/restaurant-frontend/src/styles/Register.css
+++ b/restaurant-frontend/src/styles/Register.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url('https://images.pexels.com/photos/70497/pexels-photo-70497.jpeg');
+  background-image: url('https://images.pexels.com/photos/16762563/pexels-photo-16762563/free-photo-of-cinnamon-and-dried-oranges-on-a-counter-top.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load');
   background-size: cover;
   background-position: center;
   color: white;
