--- a/restaurant-frontend/src/styles/Navbar.css
+++ b/restaurant-frontend/src/styles/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 18px 40px;
-  background: rgba(234, 210, 139, 0.6);
+  background: rgba(182, 196, 194, 0.6);
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -15,12 +15,14 @@
   font-size: 1.9rem;
   font-weight: bold;
   color: orangered;
+  text-shadow: 1px 1px 4px #dc7d09;
 }
 
 .nav-links {
   list-style: none;
   display: flex;
   gap: 25px;
+  text-shadow: 1px 1px 4px #dc7d09;
 }
 
 .nav-links li a {
@@ -40,6 +42,7 @@
   display: flex;
   gap: 15px;
   margin-left: auto;
+  text-shadow: 1px 1px 4px #32220e;
 }
 
 .nav-auth-links a {
@@ -50,6 +53,7 @@
   text-decoration: none;
   font-weight: 500;
   transition: all 0.3s ease;
+  
 }
 
 .nav-auth-links a:hover {
